<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/hangman_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".HangmanActivity" >

    <TextView
        android:id="@+id/tv_remaining_guesses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remaining_guesses"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:visibility="visible"
        tools:text="Remaining guesses: 6"
        />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="18sp"
        android:visibility="visible"
        android:text="@string/score"
        android:textStyle="bold"
        android:textColor="@color/black"
        tools:text="Score: 6"
        />

    <TextView
        android:id="@+id/tv_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/et_enter_guess"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/press_start"
        android:textColor="@color/black"
        tools:text="H _ N G _ A _"
        />

    <EditText
        android:id="@+id/et_enter_guess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tv_letters_guessed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:singleLine="true"
        android:hint="@string/guess_hint"
        android:gravity="center"
        android:enabled="false"
        />

    <TextView
        android:id="@+id/tv_letters_guessed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tv_secret_word"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/guessed_letter"
        android:textAlignment="center"
        tools:text="Guessed letters: d, g, e, j, d"
        />

    <TextView
        android:id="@+id/tv_secret_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_guess_letter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/secret_word"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@color/black"
        tools:text="The word was: Hangman"
        />

    <Button
        android:id="@+id/btn_guess_letter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_guess"
        app:layout_constraintBottom_toTopOf="@id/btn_quit_game"
        android:enabled="false"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_quit_game"
        app:layout_constraintBottom_toTopOf="@id/btn_start_game"
        android:text="@string/button_quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:enabled="false"
        />

    <Button
        android:id="@+id/btn_start_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/button_start_game"
        android:enabled="true"
        android:textStyle="bold"
        />

</android.support.constraint.ConstraintLayout>